[gd_scene load_steps=37 format=3 uid="uid://00pdaihedlyp"]

[ext_resource type="Script" path="res://Scripts/The Source.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dlchvyjjqj5ud" path="res://Scenes/Builds/Drill.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dtfhvh1qrhwiv" path="res://Scenes/Builds/Dropper.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/Stats.tscn" id="4"]
[ext_resource type="Environment" uid="uid://b4u6m5c7no0cm" path="res://Assets/Resources/main_environment.tres" id="4_vghsi"]
[ext_resource type="Material" uid="uid://lpc3bt17b1ov" path="res://grid.tres" id="5"]
[ext_resource type="Script" path="res://Scripts/Spinner.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/Pyramid.gd" id="7"]
[ext_resource type="Script" path="res://Scripts/Crystal.gd" id="8"]
[ext_resource type="Script" path="res://Scripts/Volcano.gd" id="9"]
[ext_resource type="Script" path="res://Scripts/Lava.gd" id="10"]
[ext_resource type="Material" path="res://Assets/Resources/lava.tres" id="11"]
[ext_resource type="Material" uid="uid://bo365tav6at47" path="res://Assets/Resources/plastic-brown.tres" id="12"]
[ext_resource type="Material" path="res://Assets/Resources/plastic-sand.tres" id="13"]
[ext_resource type="FontFile" uid="uid://dkg8f55oxda1r" path="res://Assets/Font/FuturaPTCondMediumOblique.otf" id="14"]
[ext_resource type="Theme" uid="uid://bapa1l6qytmcb" path="res://Assets/Resources/Swift.tres" id="15"]
[ext_resource type="Script" path="res://Scripts/Title.gd" id="16"]

[sub_resource type="StandardMaterial3D" id="13"]
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxShape3D" id="14"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="15"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="Animation" id="7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("The Source/CSGBox3D:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("The Source/CSGBox3D:material:emission")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("The Source/CSGBox3D:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5)]
}

[sub_resource type="Animation" id="8"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("The Source/CSGBox3D:material:albedo_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("The Source/CSGBox3D:material:emission")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("The Source/CSGBox3D:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5), Vector3(0.25, 0.25, 0.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cd0o"]
_data = {
"RESET": SubResource("7"),
"hit": SubResource("8")
}

[sub_resource type="Animation" id="19"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="18"]
resource_name = "Rotate"
length = 24.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 24),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 360, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6, 12, 18, 24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1, 0), Vector3(0, 0, 0), Vector3(0, 1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1iyuk"]
_data = {
"RESET": SubResource("19"),
"Rotate": SubResource("18")
}

[sub_resource type="BoxShape3D" id="20"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="21"]
transparency = 1
albedo_color = Color(0, 0, 1, 0.501961)
metallic = 1.0
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="22"]
albedo_color = Color(0.694118, 0.65098, 0.388235, 1)

[sub_resource type="Animation" id="23"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ShovelCrystal:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}

[sub_resource type="Animation" id="24"]
resource_name = "open"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ShovelCrystal:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 6, 0), Vector3(0, 6, 0), Vector3(0, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ev5w4"]
_data = {
"RESET": SubResource("23"),
"open": SubResource("24")
}

[sub_resource type="BoxShape3D" id="25"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="26"]
albedo_color = Color(0.12549, 0.12549, 0.12549, 1)

[sub_resource type="StandardMaterial3D" id="27"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.501961)
metallic = 1.0
roughness = 0.0

[sub_resource type="CylinderShape3D" id="28"]
radius = 1.5

[node name="Title" type="Node3D"]
script = ExtResource("16")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("15")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -268.0
offset_right = 328.0
offset_bottom = 268.0

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("14")
theme_override_font_sizes/font_size = 64
text = "Operation: Sky"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Username" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="ServerMenu" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="CanvasLayer/Control/VBoxContainer/ServerMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/Control/VBoxContainer/ServerMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="Address" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/ServerMenu"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Address"
alignment = 1

[node name="Port" type="SpinBox" parent="CanvasLayer/Control/VBoxContainer/ServerMenu"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 99999.0
value = 11987.0
alignment = 1

[node name="Theme" type="OptionButton" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
item_count = 2
popup/item_0/text = "Swift"
popup/item_0/id = 0
popup/item_1/text = "Clean"
popup/item_1/id = 1

[node name="Quit" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("4_vghsi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 0, 0)

[node name="Main Island" type="CSGBox3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.00636578, 0.0146129, 0.00239277)
use_collision = true
size = Vector3(8, 1, 8)
material = ExtResource("5")

[node name="The Source" type="Area3D" parent="." groups=["hurtbox", "source"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1")

[node name="CSGBox3D" type="CSGBox3D" parent="The Source"]
size = Vector3(0.5, 0.5, 0.5)
material = SubResource("13")

[node name="CollisionShape3D" type="CollisionShape3D" parent="The Source"]
shape = SubResource("14")

[node name="Hitbox" type="StaticBody3D" parent="The Source"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="The Source/Hitbox"]
shape = SubResource("15")

[node name="Timer" type="Timer" parent="The Source"]
wait_time = 60.0

[node name="Stats" parent="The Source" instance=ExtResource("4")]
health = 1
stats = {
"Cactus": 0,
"Coal": 0,
"Dirt": 0,
"Food": 0,
"Glass": 0,
"Gold": 0,
"Points": 1,
"Sand": 0,
"Stone": 0,
"Wood": 0
}
colors = {
"Cactus": Color(0.25098, 0.501961, 0.188235, 1),
"Coal": Color(0.25, 0.25, 0.25, 1),
"Dirt": Color(0.64, 0.41, 0.32, 1),
"Food": Color(1, 0.129412, 0.501961, 1),
"Glass": Color(0.75, 1, 1, 1),
"Gold": Color(1, 0.75, 0.25, 1),
"Points": Color(1, 1, 1, 1),
"Sand": Color(1, 0.88, 0.63, 1),
"Stone": Color(0.5, 0.5, 0.5, 1),
"Wood": Color(0.670588, 0.329412, 0.129412, 1)
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="The Source"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_5cd0o")
}

[node name="Spinner" type="Node3D" parent="."]
script = ExtResource("6")

[node name="Camera3D" type="Camera3D" parent="Spinner"]
transform = Transform3D(0.707107, 0.383025, -0.594384, 0, 0.840586, 0.541679, 0.707107, -0.383025, 0.594384, -3, 3, 3)
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spinner"]
libraries = {
"": SubResource("AnimationLibrary_1iyuk")
}

[node name="Desert" type="CSGBox3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -12, 0, 12)
use_collision = true
size = Vector3(24, 1, 24)
material = ExtResource("13")

[node name="ShovelCrystal" type="Area3D" parent="Desert"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1, 0)
script = ExtResource("8")
functionname = "activateshovelsword"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Desert/ShovelCrystal"]
shape = SubResource("20")

[node name="CSGBox3D" type="CSGBox3D" parent="Desert/ShovelCrystal"]
size = Vector3(0.5, 0.5, 0.5)
material = SubResource("21")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Desert"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
polygon = PackedVector2Array(0, 6, 6, 0, 0, 6)
mode = 1
spin_degrees = 360.0
spin_sides = 4
material = SubResource("22")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Desert"]
root_node = NodePath("../Area3D")
libraries = {
"": SubResource("AnimationLibrary_ev5w4")
}

[node name="Area3D" type="Area3D" parent="Desert"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Desert/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.8, 0)
shape = SubResource("25")

[node name="Volcano" type="CSGBox3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 12, 0, -12)
use_collision = true
size = Vector3(24, 1, 24)
material = SubResource("26")
script = ExtResource("9")

[node name="FireCrystal" type="Area3D" parent="Volcano"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 7.5, 0)
script = ExtResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Volcano/FireCrystal"]
shape = SubResource("20")

[node name="CSGBox3D" type="CSGBox3D" parent="Volcano/FireCrystal"]
size = Vector3(0.5, 0.5, 0.5)
material = SubResource("27")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Volcano"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
polygon = PackedVector2Array(6, 0, 4, 1.75, 3, 4, 1.75, 7, 0, 0)
mode = 1
spin_degrees = 360.0
spin_sides = 5
material = ExtResource("12")

[node name="CSGPolygon2" type="CSGPolygon3D" parent="Volcano"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0)
polygon = PackedVector2Array(1.75, 7, 0, 7, 0, 5)
mode = 1
spin_degrees = 360.0
spin_sides = 5
material = ExtResource("11")

[node name="Hitbox" type="Area3D" parent="Volcano/CSGPolygon2"]
script = ExtResource("10")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Volcano/CSGPolygon2/Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.4, 0)
shape = SubResource("28")

[node name="Timer" type="Timer" parent="Volcano/CSGPolygon2"]
wait_time = 0.1
one_shot = true

[node name="Timer" type="Timer" parent="Volcano"]
autostart = true

[node name="Objects" type="Node" parent="."]

[node name="Structures" type="Node" parent="."]

[node name="Dropper" parent="Structures" instance=ExtResource("3")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 2.9)

[node name="Drill" parent="Structures" instance=ExtResource("2")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 1.8)

[connection signal="text_submitted" from="CanvasLayer/Control/VBoxContainer/Username" to="." method="_on_Username_text_entered"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ServerMenu/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ServerMenu/Join" to="." method="_on_Join_pressed"]
[connection signal="item_selected" from="CanvasLayer/Control/VBoxContainer/Theme" to="." method="_on_Theme_item_selected"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="The Source/Timer" to="The Source" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Spinner/AnimationPlayer" to="Spinner" method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Desert/ShovelCrystal" to="Desert/ShovelCrystal" method="_on_Crystal_area_entered"]
[connection signal="area_entered" from="Desert/Area3D" to="Desert/Area3D" method="_on_Area_area_entered"]
[connection signal="area_entered" from="Volcano/FireCrystal" to="Volcano/FireCrystal" method="_on_Crystal_area_entered"]
[connection signal="area_entered" from="Volcano/CSGPolygon2/Hitbox" to="Volcano/CSGPolygon2/Hitbox" method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Volcano/CSGPolygon2/Timer" to="Volcano/CSGPolygon2/Hitbox" method="_on_Timer_timeout"]
[connection signal="timeout" from="Volcano/Timer" to="Volcano" method="_on_Timer_timeout"]
